--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -54,8 +54,8 @@ html(lang='en')
             section#about.resume-section
                 .resume-section-content
                     h1.mb-0
-                        | Clarence 
-                        span.text-primary Taylor
+                        | Gurpreet 
+                        span.text-primary Singh
                     .subheading.mb-5
                         | 216 Gerrard St E · Toronto, ON M5A 2E6 · (873) 353-1551 · 
                         a(href='mailto:name@email.com') name@email.com
