--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -29,7 +29,7 @@ html(lang='en')
             a.navbar-brand.js-scroll-trigger(href='#page-top')
                 span.d-block.d-lg-none Gurpreet Singh
                 span.d-none.d-lg-block
-                    img.img-fluid.img-profile.rounded-circle.mx-auto.mb-2(src='assets/img/profile.jpg', alt='...')
+                    img.img-fluid.img-profile.rounded-circle.mx-auto.mb-2(src='assets/img/profile.jpeg', alt='...')
             button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                 span.navbar-toggler-icon
             #navbarResponsive.collapse.navbar-collapse
@@ -58,9 +58,16 @@ html(lang='en')
                         span.text-primary Singh
                     .subheading.mb-5
                         | 216 Gerrard St E · Toronto, ON M5A 2E6 · (873) 353-1551 · 
-                        a(href='mailto:name@email.com') name@email.com
+                        a(href='mailto:name@email.com') gurpreetsinghbagga.nitj@gmail.com
                     p.lead.mb-5
-                        | I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+                    ul.fa-ul.mb-0
+                        li
+                            span.fa-li
+                                i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                            | Experienced in leveraging agile frameworks.
+                        li
+                            | Iterative approaches to corporate strategy foster collaborative thinking.
+                        <br>    
                     .social-icons
                         a.social-icon(href='#!')
                             i.fab.fa-linkedin-in
