--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -64,12 +64,35 @@ html(lang='en')
                         li
                             span.fa-li
                                 i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
-                            | Experienced in leveraging agile frameworks.
+                            | Senior Software Development Engineer with 10+ years of experience in the Payments, Investment banking, Telecom and Fitness domains.
                         li
-                            | Iterative approaches to corporate strategy foster collaborative thinking.
+                            span.fa-li
+                                i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                            | Computer Science Graduate with master’s from University of Ottawa.
+                        li
+                            span.fa-li
+                                i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                            | Hands on experience in the software development, including design, implementation, debugging, and support. 
+                        li
+                            span.fa-li
+                                i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                            | Strong at applying data structures, algorithms, and object-oriented design to solve the challenging problems.
+                        li
+                            span.fa-li
+                                i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                            | Experience with different Software Development Methodologies including Agile, Iterative, and Waterfall.  
+                        li
+                            span.fa-li
+                                i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                            | Track record of building and delivering production software systems.     
+                        li
+                            span.fa-li
+                                i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                            | Extensive experience gathering user requirements, translating business directions into system specifications, facilitating discussions with stakeholders, and coordinating between different teams through all phases of software development lifecycle.    
+
                         <br>    
                     .social-icons
-                        a.social-icon(href='#!')
+                        a.social-icon(href='http://www.linkedin.com/in/gurpreetsingh-uottawa/', target='_blank')
                             i.fab.fa-linkedin-in
                         a.social-icon(href='#!')
                             i.fab.fa-github
@@ -87,12 +110,47 @@ html(lang='en')
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 Senior Web Developer
-                            .subheading.mb-3 Intelitec Solutions
-                            p
-                                | Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
+                            h3.mb-0 Senior Software Developer
+                            .subheading.mb-3 Scotiabank
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Spearheading the Message Center Modernization, transitioning core systems from mainframe to Spring Batch for improved scalability, performance, and cost reduction.
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Modernizing database infrastructure by migrating from DB2 to MongoDB, ensuring faster data access and enhanced flexibility.
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Collaborating on cloud migration initiatives, transitioning services from Azure to Google Cloud to leverage advanced cloud-native solutions.
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Enhancing and maintaining Message File Processor which is a spring batch application to support 20+ jobs for processing campaigns received from source teams and eventually adding to Mongo db.
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Enhancing and maintaining a Spring Boot-based Campaign Management Service, which facilitates inquiring, inserting, and updating customer campaigns/offers from Mongo db to drive personalized customer engagement.
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Developing and maintaining microservices using Spring Boot and Java, with seamless integration through REST APIs.
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Implementing observability and performance monitoring using Dynatrace and Splunk for end-to-end system insights. 
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Leveraging containerization and orchestration technologies like Docker and Kubernetes to ensure robust CI/CD pipelines and scalable deployments.
+                            li
+                                span.fa-li
+                                    i.fas.fa-circle.fa-xs(style="font-size: 0.5rem; vertical-align: middle;")
+                                | Tech Stack – Spring, Spring Boot, Spring Batch, Java17, MongoDB, SQL, Kubernetes, Docker, REST, Linux, Apache Tomcat, Azure, Google Cloud Platform, Git, Bitbucket, Microservices, Swagger, Grafana, Postman, Dynatrace, Spunk.                         
+
                         .flex-shrink-0
-                            span.text-primary March 2013 - Present
+                            span.text-primary August 2024 - Present
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
