--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -154,10 +154,10 @@ html(lang='en')
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 Web Developer
-                            .subheading.mb-3 Intelitec Solutions
+                            h3.mb-0 Senior Full Stack Engineer
+                            .subheading.mb-3 Paymentus
                             p
-                                | Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+                                | Developed multiple features in different Microservices to enhance different payment channels - Agent Dashboard (AD), Customer Portal (CP), Responsive One Time Payment (ROTP), IVR, Xml One Time Payment (XOTP)
                         .flex-shrink-0
                             span.text-primary December 2011 - March 2013
 
